# openclaw-junqi

./: .gitignore  ARCHITECTURE.md  CODING-STANDARDS.md  CONTEXT.md  KOOKY_REFERENCE.md  LICENSE  STATUS.md  THIRD_PARTY_NOTICES.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-setup.ts  tsconfig.json  vite.config.ts
.github/: actionlint.yaml
.planning/: adaptive-window-controller.md  chat-production-hardening.md  first-run-onboarding-bugfix.md  gateway-lifecycle-robustness.md  gateway-lifecycle-storage.md  gateway-provider-bugfix.md  gateway-rescue-flow-bugfix.md  gateway-restart-singleflight.md  gateway-self-rescue-hardening.md  gateway-single-core.md  install-layout-hardening.md  install-upgrade-flow-hardening.md  maintenance-center-hardening.md  model-provider-official-contract.md  openclaw-channels-visualization.md  openclaw-collaboration-release-evidence.md  openclaw-dynamic-node-runtime.md  setup-installer-bugfix.md  setup-installer-visualization.md  windows-install-flow-hardening.md  windows-macos-runtime-unification.md  windows-runtime-recovery-hardening.md
docs/: 2026-07-12-code-quality-audit.md  CHANGELOG.md  NEZHA-FEATURES-AND-UI.md  NEZHA-PORT-PLAN.md  NEZHA-VISUAL-DNA.md  PERFORMANCE-AUDIT.md  adaptive-window-controller-audit.md  agent-workspace-quality-audit.md  chat-production-hardening-audit.md  comfyui-creative-studio-design.md  dashboard-operations-audit.md  first-run-onboarding-audit.md  gateway-lifecycle-robustness-audit.md  gateway-lifecycle-storage-audit.md  gateway-provider-audit.md  gateway-rescue-flow-audit.md  gateway-restart-audit.md  gateway-self-rescue-audit.md  gateway-single-core-audit.md  install-diagnostics-audit.md  install-layout-audit.md  install-upgrade-flow-audit.md  junqi-first-run-flow.html  junqi-namespace-audit.md  junqi-namespace-plan.md  macos-windows-install-flow-audit.md  mainland-china-network-policy.md  maintenance-center-audit.md  model-provider-official-contract-audit.md  monthly-icon-alternatives.html  openclaw-agent-collaboration-audit.md  openclaw-agent-collaboration-design.md  (+35 more)
scripts/: check-boundaries.mjs  (+65 more)
src-tauri/: Cargo.toml  Info.plist  JunQi.entitlements  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: runtime-artifacts.json
src-tauri/resources/collaboration/: junqi-collab.tgz  metadata.json
src-tauri/resources/skills/hatch-pet/: SKILL.md
src-tauri/resources/skills/hatch-pet/agents/: junqi.yaml
src-tauri/resources/skills/hatch-pet/references/: junqi-pet-contract.md
src-tauri/resources/skills/hatch-pet/scripts/: assemble_extended_atlas.py  compose_atlas.py  inspect_frames.py  make_contact_sheet.py  prepare_pet_run.py  render_animation_previews.py  validate_atlas.py
src-tauri/src/: lib.rs  main.rs  paths.rs  platform.rs  window_adaptation.rs  window_sizing.rs
src-tauri/src/assets/: junqi-agent-hook.mjs
src-tauri/src/commands/: agent_assist.rs  agent_event_watcher.rs  agent_task_pty.rs  agent_workspace_storage.rs  app_settings.rs  builtin_skills.rs  channel_enrollment.rs  cli_tools.rs  collaboration_bootstrap.rs  collaboration_owner.rs  config.rs  console.rs  diagnostic_output.rs  directory_transaction.rs  docker.rs  dynamic_island.rs  ensure.rs  file_preview.rs  font.rs  fs_neu.rs  fs_watcher.rs  gateway.rs  gateway_credentials.rs  gateway_logs.rs  gateway_rescue.rs  gateway_service.rs  gateway_supervisor.rs  gateway_update_handoff.rs  git_neu.rs  git_runtime.rs  hooks.rs  maintenance.rs  managed_files.rs  managed_runtime.rs  mod.rs  node_runtime.rs  notification.rs  npm_registry.rs  oauth.rs  openclaw_channel.rs  (+48 more)
src-tauri/src/commands/terminal_integration/: mod.rs  unix.rs  windows.rs
src-tauri/src/nezha/: agent_assist.rs  analytics.rs  app_settings.rs  config.rs  event_watcher.rs  fs.rs  git.rs  hooks.rs  junqi-terminal-hook.mjs  lib.rs  main.rs  nezha-hook.mjs  notification.rs  pty.rs  session.rs  subprocess.rs  usage.rs
src-tauri/src/nezha/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/state/: collaboration_control.rs  gateway_diagnostics.rs  gateway_process.rs  mod.rs  restart_governor.rs  runtime_identity.rs
src-tauri/src/tray/: menu.rs
src-tauri/windows/: uninstall-hooks.nsh
(+957 files in other folders)
