[package]
name = "junqi-desktop"
version = "0.5.0"
edition = "2021"

[lib]
name = "junqi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "sync"] }
dirs = "6"
reqwest = { version = "0.12", features = ["stream"] }
url = "2"
sha2 = "0.10"
zip = "2"
flate2 = "1"
tar = "0.4"
portable-pty = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
