[package]
name = "junqi-desktop"
version = "0.5.1"
edition = "2021"

[lib]
name = "junqi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["png", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "macros", "rt"] }
dirs = "6"
reqwest = { version = "0.12", features = ["stream", "json"] }
url = "2"
sha2 = "0.10"
zip = "2"
rand = "0.8"
flate2 = "1"
tar = "0.4"
portable-pty = "0.8"
flume = "0.11"
cpal = "0.15"
hound = "3.5"
sysinfo = "0.33"
trash = "5"
uuid = { version = "1", features = ["v4"] }
	font-kit = "0.14"
chrono = "0.4"
toml = "0.8"
serde_yaml = "0.9"
notify = "6.1"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
