[package]
name = "junqi-desktop"
version = "1.2.1"
edition = "2021"

[lib]
name = "junqi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
open = "5"
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["png", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "macros", "rt"] }
dirs = "6"
reqwest = { version = "0.12", features = ["stream", "json"] }
url = "2"
sha2 = "0.10"
zip = "2"
rand = "0.8"
flate2 = "1"
tar = "0.4"
portable-pty = "0.8"
flume = "0.11"
cpal = "0.15"
hound = "3.5"
sysinfo = "0.33"
trash = "5"
uuid = { version = "1", features = ["v4"] }
	font-kit = "0.14"
chrono = "0.4"
toml = "0.8"
serde_yaml = "0.9"
notify = "6.1"
parking_lot = "0.12"
node-semver = "2.2"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry"] }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Storage_FileSystem", "Win32_System_Environment", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
